[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/main/Main.gd" type="Script" id=2]
[ext_resource path="res://scenes/main/music.mp3" type="AudioStream" id=3]
[ext_resource path="res://scenes/grid/Grid.tscn" type="PackedScene" id=4]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Grid" parent="." instance=ExtResource( 4 )]
camera_path = NodePath("../Player/Camera2D")

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="StartTimer" type="Timer" parent="."]
one_shot = true
__meta__ = {
"_editor_description_": "2021-08-30_-_Boss_Time_-_www.FesliyanStudios.com"
}

[node name="GameTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -25.0

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
